Closed Bug 1303638 Opened 8 years ago Closed 8 years ago

file.webkitRelativePath does not include root directory

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla52
Tracking Status
firefox49 --- unaffected
firefox50 + fixed
firefox51 + fixed
firefox52 + verified

People

(Reporter: me, Assigned: baku)

References

Details

(Keywords: site-compat)

Attachments

(2 files)

Attached file wkd.html
See attached test case. When uploading a directory with the structure dir `-- file the `webkitRelativePath` in Blink will be dir/file while in Firefox it is just /file resulting in the server being unable to know the name of the directory that was uploaded.
Is this intentional?
Flags: needinfo?(amarchesini)
Attached patch upload.patchSplinter Review
This fixes the dropbox issue as well \o/
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #8793675 - Flags: review?(bugs)
oh, we need this then to branches asap. /me reviews
Comment on attachment 8793675 [details] [diff] [review] upload.patch We want this for FF50 and FF51 too. Make this bug to block the dropbox issue? And ask approvals.
Attachment #8793675 - Flags: review?(bugs) → review+
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/264fb5fec2d8 file.webkitRelativePath must contain the leafName of the parent directory, r=smaug
[Tracking Requested - why for this release]: We enabled this API for FF50, so better to fix issues in it before FF50 being the release version.
Comment on attachment 8793675 [details] [diff] [review] upload.patch Approval Request Comment [Feature/regressing bug #]:bug 1258490 [User impact if declined]: We return wrong webkit path and this can break the compatibility with websites. [Describe test coverage new/current, TreeHerder]: we have mochitests [Risks and why]: not really. The patch is very easy. [String/UUID change made/needed]: none
Attachment #8793675 - Flags: approval-mozilla-beta?
Attachment #8793675 - Flags: approval-mozilla-aurora?
Tracking 52+ for this API issue.
Keywords: site-compat
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Hello silverwind, could you please verify this issue is fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(me)
Comment on attachment 8793675 [details] [diff] [review] upload.patch planned feature work for 50, Aurora51+, Beta50+
Attachment #8793675 - Flags: approval-mozilla-beta?
Attachment #8793675 - Flags: approval-mozilla-beta+
Attachment #8793675 - Flags: approval-mozilla-aurora?
Attachment #8793675 - Flags: approval-mozilla-aurora+
The change appears to be working fine on my side in today's Nightly, thanks!
Flags: needinfo?(me)
(In reply to silverwind from comment #16) > The change appears to be working fine on my side in today's Nightly, thanks! Awesome! Thanks a lot for the verification.
Status: RESOLVED → VERIFIED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: