Bug 1303638 - file.webkitRelativePath must contain the leafName of the parent directory. r=smaug, a=ritu